Change target+selector for block in InfoBarView

InfoBarView used a target and a selector for sending the information that a
link has been clicked. This is triggering a warning when compiling with ARC.
This CL changes this by using a block instead.

BUG=714060

Review-Url: https://codereview.chromium.org/2831293002
Cr-Commit-Position: refs/heads/master@{#466335}

Former-commit-id: d7eb90bb8049854a8c77604a6fc7c9e4f3d688bc